[package]
name = "boj"
version = "0.1.0"
edition = "2018"

[build-dependencies]
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }

[workspace]
members = [
  "problem-1000",
  "problem-1001",
  "problem-1008",
  "problem-1038",
  "problem-1541",
  "problem-2438",
  "problem-2439",
  "problem-2440",
  "problem-2441",
  "problem-2557",
  "problem-2558",
  "problem-2739",
  "problem-2742",
  "problem-3029",
  "problem-4828",
  "problem-5430",
  "problem-8393",
  "problem-10172",
  "problem-10430",
  "problem-10769",
  "problem-10822",
  "problem-10869",
  "problem-10950",
  "problem-10951",
  "problem-10952",
  "problem-10953",
  "problem-10998",
  "problem-11021",
  "problem-11022",
  "problem-11816",
  "problem-14490",
]
