[package]
name = "boj"
version = "0.1.0"
edition = "2018"

[build-dependencies]
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }

[workspace]
members = [
  "problem-1xxx/problem-1000",
  "problem-1xxx/problem-1001",
  "problem-1xxx/problem-1008",
  "problem-1xxx/problem-1038",
  "problem-1xxx/problem-1541",

  "problem-2xxx/problem-2438",
  "problem-2xxx/problem-2439",
  "problem-2xxx/problem-2440",
  "problem-2xxx/problem-2441",
  "problem-2xxx/problem-2557",
  "problem-2xxx/problem-2558",
  "problem-2xxx/problem-2739",
  "problem-2xxx/problem-2742",
  "problem-2xxx/problem-2870",

  "problem-3xxx/problem-3029",
  "problem-3xxx/problem-3568",
  "problem-3xxx/problem-3613",

  "problem-4xxx/problem-4828",

  "problem-5xxx/problem-5430",

  "problem-8xxx/problem-8393",
  "problem-8xxx/problem-8595",

  "problem-9xxx/problem-9324",
  "problem-9xxx/problem-9536",

  "problem-10xxx/problem-10172",
  "problem-10xxx/problem-10430",
  "problem-10xxx/problem-10769",
  "problem-10xxx/problem-10822",
  "problem-10xxx/problem-10823",
  "problem-10xxx/problem-10869",
  "problem-10xxx/problem-10950",
  "problem-10xxx/problem-10951",
  "problem-10xxx/problem-10952",
  "problem-10xxx/problem-10953",
  "problem-10xxx/problem-10998",

  "problem-11xxx/problem-11021",
  "problem-11xxx/problem-11022",
  "problem-11xxx/problem-11816",

  "problem-12xxx/problem-12605",
  
  "problem-14xxx/problem-14490",

  "problem-19xxx/problem-19583",

  "problem-20xxx/problem-20291",
]
