[package]
name = "boj"
version = "0.1.0"
edition = "2018"

[build-dependencies]
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }

[workspace]
members = [
  "1/10/100/problem-1000",
  "1/10/100/problem-1001",
  "1/10/100/problem-1008",
  "1/10/101/problem-10172",
  "1/10/103/problem-1038",
  "1/10/104/problem-10430",
  "1/10/107/problem-10769",
  "1/10/108/problem-10822",
  "1/10/108/problem-10823",
  "1/10/108/problem-10869",
  "1/10/109/problem-10950",
  "1/10/109/problem-10951",
  "1/10/109/problem-10952",
  "1/10/109/problem-10953",
  "1/10/109/problem-10998",
  "1/11/110/problem-11021",
  "1/11/110/problem-11022",
  "1/11/115/problem-11507",
  "1/11/118/problem-11816",
  "1/12/126/problem-12605",
  "1/14/144/problem-14490",
  "1/15/154/problem-1541",
  "1/19/195/problem-19583",
  "1/19/196/problem-19641",
  "2/20/202/problem-20291",
  "2/24/243/problem-2438",
  "2/24/243/problem-2439",
  "2/24/244/problem-2440",
  "2/24/244/problem-2441",
  "2/25/255/problem-2557",
  "2/25/255/problem-2558",
  "2/27/273/problem-2739",
  "2/27/274/problem-2742",
  "2/28/287/problem-2870",
  "3/30/302/problem-3029",
  "3/30/300/problem-3005",
  "3/35/356/problem-3568",
  "3/36/361/problem-3613",
  "4/48/482/problem-4828",
  "5/54/543/problem-5430",
  "5/56/563/problem-5637",
  "8/83/839/problem-8393",
  "8/85/859/problem-8595",
  "9/93/932/problem-9324",
  "9/95/953/problem-9536",
]
